--- a/TES/platformio.ini
+++ b/TES/platformio.ini
@@ -8,9 +8,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:blackpill_f411ce]
+; [env:blackpill_f411ce]
+; platform = ststm32
+; board = blackpill_f411ce
+; framework = stm32cube
+; upload_protocol = dfu
+; ; monitor_speed = 115200 ; Baud rate yang sesuai dengan konfigurasi UART2
+[env:stm32h743vit6]
 platform = ststm32
-board = blackpill_f411ce
-framework = stm32cube
-upload_protocol = dfu
-; monitor_speed = 115200 ; Baud rate yang sesuai dengan konfigurasi UART2
+board = h743vit6    ; Menetapkan board STM32H743VIT6
+framework = stm32cube  ; Menggunakan STM32Cube HAL
+
+; Protokol upload via SWD menggunakan ST-Link
+upload_protocol = stlink
+debug_tool = stlink
+
+; Memastikan build flags sesuai dengan chip yang digunakan
+build_flags = 
+    -DSTM32H743xx
+
+; Opsional: Frekuensi clock (ganti sesuai dengan board spesifik)
+board_build.clock_source = external
+board_build.f_cpu = 400000000L   ; 400 MHz (Clock untuk H7 series)
