--- a/THERMOCOUPLE_HAL/platformio.ini
+++ b/THERMOCOUPLE_HAL/platformio.ini
@@ -12,4 +12,8 @@
 platform = ststm32
 board = blackpill_f411ce
 framework = stm32cube
-upload_protocol = dfu
+upload_protocol = stlink
+debug_tool = stlink
+; build_flags = 
+;     -DSTM32H743xx
+
