--- a/THERMOCOUPLE_HAL/platformio.ini
+++ b/THERMOCOUPLE_HAL/platformio.ini
@@ -8,12 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:blackpill_f411ce]
+[env:weact_mini_h743vitx]
 platform = ststm32
-board = blackpill_f411ce
+board = weact_mini_h743vitx
 framework = stm32cube
 upload_protocol = stlink
 debug_tool = stlink
-; build_flags = 
-;     -DSTM32H743xx
-
+build_flags = 
+    -DSTM32H743xx
